# layoutlmv-attn-bench

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: pre-commit.yml
layoutlmv_attn_benchmark/: data.py  main.py  training_module.py
